Make FileEnumerator do not follow infinite symlink loops.

When recursive mode is set visit each inode no more than once.

BUG=880692

Change-Id: I1a3709831630f4b418c0553ed7af92b91761c7c6
Reviewed-on: https://chromium-review.googlesource.com/1213951
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Alexei Filippov <alph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590921}
Former-commit-id: ec7fdd0d23b0c3e60610d16a566771ca04fe24cd